--- a/todo.txt
+++ b/todo.txt
@@ -1,2 +1,13 @@
 - Add media queries to mobile (and tablet?) to make sure that text doesn't look weird on mobile
 title page looks good at the moment but entries need work - maybe reduce text size? 
+
+
+- work out how to make new text appear next to project links when hovered over using spans have already started
+to implement in the html)
+
+
+- think of a different word for 'Projectiles' 
+
+
+- think of drop down possibilities for 'time and plane' section - two navigational methods - maybe blend them together
+to stop it from being too confusing - plane shifter. time drifter. ???
