--- a/todo.txt
+++ b/todo.txt
@@ -1,6 +1,10 @@
 - Add media queries to mobile (and tablet?) to make sure that text doesn't look weird on mobile
 title page looks good at the moment but entries need work - maybe reduce text size? 
 
+for big screens - increase text size and margins - 1365px and more
+
+for mobiles - decrease and decrease - 540px and under
+
 
 - work out how to make new text appear next to project links when hovered over using spans have already started
 to implement in the html)
