Add first Optic Verve entry and extra css for entries with images appearing within them

--- a/todo.txt
+++ b/todo.txt
@@ -9,6 +9,12 @@ for mobiles - decrease and decrease - 540px and under
 - work out how to make new text appear next to project links when hovered over using spans have already started
 to implement in the html)
 
+flashes + phantoma - few things are as lifeless as other people's dreams
+
+magic + machine - 
+
+dawn cuts evening blues - attempts to write in the morning, attempts to write at night, attempts to write somewhere in between
+
 
 
 
