--- a/todo.txt
+++ b/todo.txt
@@ -1,9 +1,6 @@
-- Add media queries to mobile (and tablet?) to make sure that text doesn't look weird on mobile
-title page looks good at the moment but entries need work - maybe reduce text size? 
+check media query on big screen to see if works
 
-for big screens - increase text size and margins - 1365px and more
 
-for mobiles - decrease and decrease - 540px and under
 
 
 add entry for flightdecks using image (already included in opticverve image folder)
