Edit dream drive and to do

--- a/todo.txt
+++ b/todo.txt
@@ -3,17 +3,15 @@ check media query on big screen to see if works
 
 
 
-add entry for flightdecks using image (already included in opticverve image folder)
-
 
 - work out how to make new text appear next to project links when hovered over using spans have already started
 to implement in the html)
 
-flashes + phantoma - few things are as lifeless as other people's dreams
+flashes + phantoma - few things are as lifeless as other people's dreams   (invisible links?)
 
-magic + machine - 
+magic + machine - thinking about fantasy, the imagination, interactive text, role play, and the cogs behind the curtain    +  and  o 
 
-dawn cuts evening blues - attempts to write in the morning, attempts to write at night, attempts to write somewhere in between
+dawn cuts evening blues - attempts to write in the morning, attempts to write at night, attempts to write somewhere in between       
 
 
 
